--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="me">
                 <div>
                 <p>
-                <img class="mypic" src="/images/portfoliopic1.jpg">
+                <img class="mypic" src="https://res.cloudinary.com/dlsaoyrfz/image/upload/v1656700332/my-uploads/pic_of_me_wtc3sx.jpg">
                 </p>
                 </div>
                 <div class="p-box">
